--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.1.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-mocha-phantomjs": "~0.2.7"
+    "grunt-mocha": "*"
   },
   "author": "Kwan Yu Kit Tommy",
   "license": "MIT"
